Генерирует swagger для аутентификации
